--- a/class2.html
+++ b/class2.html
@@ -385,7 +385,10 @@
 					<img src="./image/css/167.png" alt="">
 				</div>
 			</section>
+			<a href="./test.html" class="test btn">测试</a>
+			<img src="./image/css/168.png" alt="">
 		</div>
+		
 	</div>
 </body>
 
