--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		transition:.3s;
 		font-size:18px;
 		font-family: "Microsoft YaHei";
+		margin:10px;
 	}
 	.html-btn {
 		background:#409EFF;
@@ -34,6 +35,9 @@
 	}
 	.js-btn {
 		background:#F56C6C;
+	}
+	.vue-btn {
+		background:#67C23A;
 	}
 	a:hover {
 		opacity: .8;
@@ -51,7 +55,8 @@
 	<div class="btn-group">
 		<a href="./class1.html" class="btn html-btn">html基础</a>
 		<a href="./class2.html" class="btn css-btn">css基础</a>
-		<a href="./class2.html" class="btn js-btn">js基础</a>
+		<a href="javascript:void(0)" class="btn js-btn">js基础</a>
+		<a href="javascript:void(0)" class="btn vue-btn">Vue基础</a>
 	</div>
 	<script>
 			//定义画布宽高和生成点的个数
