--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>前端开发</title>
+	<title>高路信息-前端开发</title>
 </head>
 <style>
 	.btn-group {
@@ -55,8 +55,8 @@
 	<div class="btn-group">
 		<a href="./class1.html" class="btn html-btn">html基础</a>
 		<a href="./class2.html" class="btn css-btn">css基础</a>
-		<a href="javascript:void(0)" class="btn js-btn">js基础</a>
-		<a href="javascript:void(0)" class="btn vue-btn">Vue基础</a>
+		<a href="./class3.html" class="btn js-btn">js基础</a>
+		<a href="./class4.html" class="btn vue-btn">Vue基础</a>
 	</div>
 	<script>
 			//定义画布宽高和生成点的个数
